--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,7 @@ fabric.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+/springStudy.iml
+/mvc/mvc.iml
+/mvc/.mvn/wrapper/maven-wrapper.properties
+/mvc/.mvn/
